// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> renders a toggle with an error 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <WithStyles(ForwardRef(Switch))
        checked={false}
        color="primary"
        onChange={[MockFunction]}
      />
    }
    label={<b />}
    name="Not very awesome toggle"
    style={
      Object {
        "height": "30px",
        "margin": "8px 0px 0px -8px",
      }
    }
  />
  <WithStyles(ForwardRef(FormHelperText))
    error={true}
    style={
      Object {
        "margin": 0,
      }
    }
  >
    Ooops
  </WithStyles(ForwardRef(FormHelperText))>
</div>
`;

exports[`<Toggle /> renders a toggled toggle 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <WithStyles(ForwardRef(Switch))
        checked={true}
        color="primary"
        onChange={[MockFunction]}
      />
    }
    label={<b />}
    name="Awesome toggle"
    style={
      Object {
        "height": "30px",
        "margin": "8px 0px 0px -8px",
      }
    }
  />
</div>
`;
